--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -445,6 +445,18 @@ header h1 {
     box-shadow: 2px 2px 2px black;
 }
 
+.widget-users-dialog {
+    height: 200px;
+}
+
+.widget-users {
+    list-style-type: none;
+}
+
+.widget-user {
+
+}
+
 .widget-content {
     width: 80%;
     margin: 0 auto;
