--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -817,6 +817,11 @@ span.error, label.error {
 .widget-menu-item-disabled {
     color: #D3D3D3;
 }
+
+.widget-menu-item-divider {
+    border-top: 1px solid #000000;
+}
+
 .widget-menu-button {
     cursor: pointer;
 }
