RAVE-381 - Don't use javascript alert messages - thanks to marijan milicevic for the patch!
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1222820 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -1071,6 +1071,19 @@ span.error, label.error {
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
+.topbar-message {
+    position: relative;
+    top: 0;
+    left: 0;
+    background-color: #57a957;
+    line-height: 28px;
+    width: 100%;
+    padding-top: 8px;
+    text-align: center;
+    font-size: 14px;
+}
+
+
 @media all and (max-width: 900px) {
     .storeSearch {
         width: 100%;
