RAVE-383: Update Widget throws error
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1230270 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -1038,6 +1038,10 @@ span.error, label.error {
     font-style: italic;
 }
 
+.datatable tbody tr {
+    cursor: pointer;
+}
+
 .formbox {
     border: 1px solid #B4C4CF;
     margin: 1em 10px;
