Code in support of RAVE-458: Person Profile multiple sub-pages - added infrastructure to allow for a hierarchy of Page objects for any Page Type (USER, PERSON_PROFILE)
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1291474 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -186,6 +186,13 @@ header h1 {
     margin: 1em 0;
 }
 
+#personProfileContent {
+    background-color: transparent;
+    padding: 0 20px;
+    width: 90%;
+    margin: 1em auto 0;
+}
+
 /* Widgets */
 .widget {
     padding: 5px;
@@ -355,7 +362,7 @@ header h1 {
     width: 90%;
 }
 
-.columns_2_1, .columns_2_2 {
+.columns_2_1, .columns_2_2, .person_profile_1, .person_profile_2 {
     width: 45%;
 }
 
@@ -396,7 +403,7 @@ header h1 {
     clear: both;
 }
 
-.columns_2_2, .columns_3_3, .columns_3nwn_3, .columns_4_4, .columns_3nwn_1_bottom_3, .columns_3nwn_1_bottom_4 {
+.columns_2_2, .columns_3_3, .columns_3nwn_3, .columns_4_4, .columns_3nwn_1_bottom_3, .columns_3nwn_1_bottom_4, .person_profile_2 {
     margin-right: 0;
 }
 
