--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -193,6 +193,18 @@ header h1 {
     margin: 1em auto 0;
 }
 
+#person-profile-left {
+    float: left;
+    width: 65%;
+    border-right: 1px solid black;
+    margin-right: 5px;
+}
+
+#person-profile-right {
+    float: left;
+    width: 33%;
+}
+
 /* Widgets */
 .widget {
     padding: 5px;
@@ -362,7 +374,7 @@ header h1 {
     width: 90%;
 }
 
-.columns_2_1, .columns_2_2, .person_profile_1, .person_profile_2 {
+.columns_2_1, .columns_2_2 {
     width: 45%;
 }
 
@@ -440,6 +452,10 @@ header h1 {
     display: inline-block;
     width: 100%;
     text-align: center;
+}
+
+.person_profile_1 {
+    width: 97%;
 }
 
 .storeSearch {
