RAVE-459: Locked Widgets on Person Profile Page - added ability to lock RegionWidgets or Regions to prevent add/move/deleting of widgets from regions - code is generic enough to be used for any Page type, not just Person Profile Pages
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1292854 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -199,10 +199,13 @@ header h1 {
     margin: 1em auto 0;
 }
 
+.person-profile-page-content {
+    background: none !important;
+}
+
 #person-profile-left {
     float: left;
     width: 65%;
-    border-right: 1px solid black;
     margin-right: 5px;
 }
 
@@ -269,6 +272,10 @@ header h1 {
 
 .widget-title-bar:hover {
     cursor: move;
+}
+
+.widget-title-bar-locked:hover {
+    cursor: default !important;
 }
 
 .widget-title-bar-mobile {
