RAVE-264: Featured Widgets
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1294746 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/webapp/css/default.css
+++ b/rave-portal-resources/src/main/webapp/css/default.css
@@ -500,6 +500,10 @@ header h1 {
     box-shadow: 2px 2px 2px black;
 }
 
+.storeItemFeatured {
+    background-color: #D5EAF9;
+}
+
 .widget-users-dialog {
     height: 200px;
 }
